--- a/MA506_432_ice.ipynb
+++ b/MA506_432_ice.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "(43013, 18)"
       ]
      },
-     "execution_count": 416,
+     "execution_count": 548,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "2789"
       ]
      },
-     "execution_count": 419,
+     "execution_count": 551,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "       [2.0153250e+03, 8.5900000e-01]])"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 554,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 559,
    "metadata": {
     "tags": []
    },
@@ -447,26 +447,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.1233774]\n",
-      "[1.19624783]\n",
-      "[1.38656004]\n",
-      "[1.58477098]\n",
-      "[1.1966601]\n",
-      "[1.26381153]\n",
-      "[1.38762714]\n",
-      "[1.58577467]\n",
-      "[1.19696115]\n",
-      "[3.50938949]\n",
-      "[3.51594918]\n",
-      "[1.74972592]\n",
-      "[1.66594171]\n",
-      "[1.63059614]\n",
-      "[1.55970763]\n",
-      "[3.0405949]\n",
-      "[1.63906257]\n",
-      "[3.47061379]\n",
-      "[1.57075102]\n",
-      "[2.11246099]\n"
+      "model predicted: 2.1233774012599227 \tactual value: 2.873001847836609 \tpercent error: 35.303401370471896 %\n",
+      "model predicted: 1.1962478296237862 \tactual value: 0.9796123492099572 \tpercent error: 18.109581898423148 %\n",
+      "model predicted: 1.3865600354042584 \tactual value: 1.2592216062260075 \tpercent error: 9.183766005568215 %\n",
+      "model predicted: 1.5847709785871587 \tactual value: 1.4952309658144562 \tpercent error: 5.650028551919113 %\n",
+      "model predicted: 1.196660095257144 \tactual value: 0.9618294790184976 \tpercent error: 19.623836139383 %\n",
+      "model predicted: 1.263811534514602 \tactual value: 0.188942066868406 \tpercent error: 85.0498225638545 %\n",
+      "model predicted: 1.3876271425167275 \tactual value: 1.2736034017523572 \tpercent error: 8.217174287724466 %\n",
+      "model predicted: 1.585774665405836 \tactual value: 1.4541117266335304 \tpercent error: 8.302752064626413 %\n",
+      "model predicted: 1.1969611459239502 \tactual value: 0.9568647967306978 \tpercent error: 20.058825636142004 %\n",
+      "model predicted: 3.509389487286665 \tactual value: -6.467582895010416 \tpercent error: 284.293676106351 %\n",
+      "model predicted: 3.5159491828687273 \tactual value: -5.67994358623457 \tpercent error: 261.5479431247126 %\n",
+      "model predicted: 1.749725917662964 \tactual value: 1.9937104202784983 \tpercent error: 13.94415549044471 %\n",
+      "model predicted: 1.6659417094765843 \tactual value: 1.3210290775110436 \tpercent error: 20.703763523269217 %\n",
+      "model predicted: 1.6305961353381662 \tactual value: 1.7603376957518146 \tpercent error: 7.956694953575469 %\n",
+      "model predicted: 1.559707634201267 \tactual value: 1.5308491719957815 \tpercent error: 1.8502481857931043 %\n",
+      "model predicted: 3.0405949027762986 \tactual value: 2.046300556621664 \tpercent error: 32.70065161415508 %\n",
+      "model predicted: 1.639062567250761 \tactual value: 1.753295219245015 \tpercent error: 6.969389349538938 %\n",
+      "model predicted: 3.470613792305201 \tactual value: -2.47914329247956 \tpercent error: 171.43241630561545 %\n",
+      "model predicted: 1.5707510215988947 \tactual value: 1.428263167706897 \tpercent error: 9.071320147667752 %\n",
+      "model predicted: 2.112460988441306 \tactual value: 1.5223566057683922 \tpercent error: 27.934451140246928 %\n"
      ]
     }
    ],
@@ -484,38 +484,40 @@
     "\n",
     "for i in range(20):\n",
     "    test = [coord[i]]\n",
-    "    print(model.predict(test))"
+    "    predicted_val = model.predict(test)\n",
+    "    error = (  abs(h[i] - predicted_val ) / predicted_val) * 100\n",
+    "    print( 'model predicted:', predicted_val[0] , '\\tactual value:', h[i], '\\tpercent error:',  error[0], '%' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.12336176]\n",
-      "[1.19623436]\n",
-      "[1.38655832]\n",
-      "[1.58478235]\n",
-      "[1.19664634]\n",
-      "[1.26380242]\n",
-      "[1.38762539]\n",
-      "[1.58578582]\n",
-      "[1.19694721]\n",
-      "[3.50946537]\n",
-      "[3.5160253]\n",
-      "[1.74969901]\n",
-      "[1.66589664]\n",
-      "[1.63054164]\n",
-      "[1.55965615]\n",
-      "[3.04063325]\n",
-      "[1.6390076]\n",
-      "[3.47068896]\n",
-      "[1.57069919]\n",
-      "[2.11244703]\n"
+      "model predicted: 2.1233617640859634 \tactual value: 2.873001847836609 \tpercent error: 35.304397791741366 %\n",
+      "model predicted: 1.1962343600048868 \tactual value: 0.9796123492099572 \tpercent error: 18.108659810945795 %\n",
+      "model predicted: 1.3865583228890728 \tactual value: 1.2592216062260075 \tpercent error: 9.183653839943984 %\n",
+      "model predicted: 1.5847823523972338 \tactual value: 1.4952309658144562 \tpercent error: 5.650705691372502 %\n",
+      "model predicted: 1.1966463412782886 \tactual value: 0.9618294790184976 \tpercent error: 19.62291231417242 %\n",
+      "model predicted: 1.2638024152703835 \tactual value: 0.188942066868406 \tpercent error: 85.0497146875619 %\n",
+      "model predicted: 1.3876253948033792 \tactual value: 1.2736034017523572 \tpercent error: 8.21705868731081 %\n",
+      "model predicted: 1.585785819769903 \tactual value: 1.4541117266335304 \tpercent error: 8.303397059981187 %\n",
+      "model predicted: 1.1969472114610937 \tactual value: 0.9568647967306978 \tpercent error: 20.057894987476622 %\n",
+      "model predicted: 3.509465365090211 \tactual value: -6.467582895010416 \tpercent error: 284.2896915110079 %\n",
+      "model predicted: 3.516025299641079 \tactual value: -5.67994358623457 \tpercent error: 261.5444458495332 %\n",
+      "model predicted: 1.7496990138598534 \tactual value: 1.9937104202784983 \tpercent error: 13.945907523851966 %\n",
+      "model predicted: 1.665896637258335 \tactual value: 1.3210290775110436 \tpercent error: 20.701618097678644 %\n",
+      "model predicted: 1.630541635332122 \tactual value: 1.7603376957518146 \tpercent error: 7.960303349951238 %\n",
+      "model predicted: 1.559656145006393 \tactual value: 1.5308491719957815 \tpercent error: 1.8470079512618112 %\n",
+      "model predicted: 3.0406332493533057 \tactual value: 2.046300556621664 \tpercent error: 32.70150035171524 %\n",
+      "model predicted: 1.6390075990599442 \tactual value: 1.753295219245015 \tpercent error: 6.972976833702342 %\n",
+      "model predicted: 3.4706889631537976 \tactual value: -2.47914329247956 \tpercent error: 171.43086916745125 %\n",
+      "model predicted: 1.5706991945790918 \tactual value: 1.428263167706897 \tpercent error: 9.068319851680066 %\n",
+      "model predicted: 2.1124470308353267 \tactual value: 1.5223566057683922 \tpercent error: 27.933974980361736 %\n"
      ]
     }
    ],
@@ -533,12 +535,14 @@
     "\n",
     "for i in range(20):\n",
     "    test = [coord[i]]\n",
-    "    print(model.predict(test))"
+    "    predicted_val = model.predict(test)\n",
+    "    error = (  abs(h[i] - predicted_val ) / predicted_val) * 100\n",
+    "    print( 'model predicted:', predicted_val[0] , '\\tactual value:', h[i], '\\tpercent error:',  error[0], '%' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 561,
    "metadata": {
     "tags": []
    },
@@ -554,6 +558,69 @@
    "source": [
     "print('end')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
